# ockam

implementations/elixir/ockam/ockam_vault_software/native/vault/software/: CMakeLists.txt
implementations/rust/: .gitignore  Cargo.toml
implementations/rust/examples/: Cargo.toml
implementations/rust/examples/node_demo/src/: actor.rs  log.rs  main.rs
implementations/rust/ffi/include/: kex.h  vault.h
implementations/rust/message_router/src/: lib.rs
implementations/rust/no_std_traits/: Cargo.toml
implementations/rust/no_std_traits/src/: lib.rs
implementations/rust/node/: Cargo.toml
implementations/rust/node/src/: lib.rs
implementations/rust/node/tests/: integration_test.rs
implementations/rust/ockam/: Cargo.toml
implementations/rust/ockam/src/: lib.rs
implementations/rust/ockam/src/secure_channel/: mod.rs
implementations/rust/queue/: Cargo.toml
implementations/rust/queue/src/: lib.rs
implementations/rust/tcp_manager/: Cargo.toml
implementations/rust/tcp_manager/src/: tcp_manager.rs  tcp_worker.rs
implementations/rust/tcp_router/src/: lib.rs
implementations/rust/topic/: Cargo.toml
implementations/rust/topic/src/: lib.rs  topic.rs
implementations/rust/worker_manager/: Cargo.toml
implementations/rust/worker_manager/src/: lib.rs
